opam-version: "2.0"
maintainer:   "Clément Pascutto <clement@pascutto.fr>"
authors:      "Clément Pascutto <clement@pascutto.fr>"
license:      "MIT"
homepage:     "https://github.com/mirage/bloomf"
bug-reports:  "https://github.com/mirage/bloomf/issues"
dev-repo:     "git+https://github.com/mirage/bloomf.git"
doc:          "https://mirage.github.io/bloomf/"

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "2.0.0"}
  "bloomf" {=version}
  "bechamel-notty"
  "alcotest" {>= "1.0.0" & with-test}
]
synopsis: "Benchmarking package for `bloomf`"
description: "Benchmarking package for `bloomf`"
