opam-version: "2.0"
maintainer:   "Clement Pascutto"
authors:      ["Clement Pascutto"]
license:      "MIT"
homepage:     "https://github.com/pascutto/bloomf"
bug-reports:  "https://github.com/pascutto/bloomf/issues"
dev-repo:     "git+https://github.com/pascutto/bloomf.git"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml"   {>= "4.03.0"}
  "dune"    {build & >= "1.7.0"}
  "bechamel" {with-test}
  "notty" {with-test}
]
synopsis: "A bloom filter library"
